$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 1.16-25 (opened August 23, 2009)

	* mantel.correlog: updated to the version 1.4 of Pierre Legendre's
	package. 

	*  RsquareAdj documented.

Version 1.16-24 (opened August 17, 2009)

	* ordiellipse & ordihull: gained new argument 'label' to put the
	name of the group in the centre of the ellipse or the hull. The
	functions now return invisibly data on their plots for each
	plotted item: ordiellipse() the covariance matrix (cov.wt()
	result), and ordihull() the coordinates of the hull vertices.
	These inivisible results have a summary() method that displays the
	centres of the hulls or ellipses and their surface areas.

	* ordiellipse: does not depend on the 'ellipse' package, but finds
	the coordinates of ellipse using the equation taken from the 'car'
	package. However, this devel version of 'vegan' still must SUGGEST
	'ellipse', because 'plot.MOStest' requires 'ellipse'. The current
	release version does not include 'plot.MOStest' and could be
	liberated from the 'ellipse' dependence.

	* spantree: first argument 'd' like in hclust()instead of 'dis'.
	Got a 'call' item so that update() works.

	* treedive & treeheight: accept 'spantree' objects. EXPERIMENTAL
	CHANGE THAT MAY BE CANCELLED.

	* treedist: average distance of species trees for two
	sites. Generalization of treedive(): builds a species tree of two
	sites and sees how much of the tree is shared between two sites,
	and how much is unique to the combination. The measure is similar
	to Jaccard index: the proportion of unique (unshared) tree of the
	combined tree. In principle, this is similar to UniFrac metric
	(C. Lozupone & R. Knight, Appl. Environ. Microbiol. 71:8225-8235;
	2005), but numerically and computationally different (and the
	current implementation may specify a new unpublished method). AN
	EXPERIMENTAL CHANGE THAT MAY BE CANCELLED.
	
Version 1.16-23 (closed August 17, 2009)
